2001-05-30  Kjetil Jacobsen  <kjetilja@cs.UiT.No>

	* Moved code to sourceforge.

	* Added getinfo support.
