@@ -2,6 +2,4 @@ PycURL - cURL Python module
 ---------------------------
 
 * handle function objects as callbacks (READ/WRITEFUNCTION)
-* type checking on setopt (currently some segfaults here if the
-  wrong type is passed as argument)
 * distutils instead of hand-crafted Makefile
