@@ -1,3 +1,7 @@
+2001-05-31  Kjetil Jacobsen  <kjetilja@cs.UiT.No>
+
+	* Added better type checking for setopt.
+
 2001-05-30  Kjetil Jacobsen  <kjetilja@cs.UiT.No>
 
 	* Moved code to sourceforge.
